--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
+    <ImageView
+        android:id="@+id/id_activity_main_user_profile_iv"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"
+        />
+    <ImageView
+        android:id="@+id/id_activity_main_user_avatar_iv"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"
+        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/id_activity_main_user_profile_iv"
+        android:layout_marginBottom="-10dp"
+        android:layout_marginRight="10dp"
+
+        />
     <TextView
+        android:id="@+id/id_activity_main_user_nickname_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is main"
+        android:layout_alignBottom="@+id/id_activity_main_user_profile_iv"
+        android:layout_toLeftOf="@+id/id_activity_main_user_avatar_iv"
+        android:layout_marginRight="5dp"
+        android:text="NickName"
+        android:layout_marginBottom="10dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         />
-</LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/id_activity_main_content_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/id_activity_main_user_avatar_iv"
+        android:layout_marginTop="20dp"
+        />
+
+</RelativeLayout>
