--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,19 @@
         android:textColor="@color/white"
         />
 
+    <com.dike.test.twhomework.ui.view.PictureView
+        android:id="@+id/id_activity_main_pv"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/id_activity_main_user_avatar_iv"
+        android:visibility="gone"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/id_activity_main_content_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/id_activity_main_user_avatar_iv"
+        android:layout_below="@+id/id_activity_main_pv"
         android:layout_marginTop="20dp"
         />
 
